# my_plugin_pi

./: CMakeLists.txt
src/: icons.cpp  icons.h  my_plugin_pi.cpp  my_plugin_pi.h  version.h
